--- a/fio_analyzer_shapp/local/props.conf
+++ b/fio_analyzer_shapp/local/props.conf
@@ -1,1 +1,3 @@
 [fio]
+EXTRACT-hostname,job_sizemb,job_num = ^(?:[^\-\n]*\-){3}(?P<hostname>\w+)\-(?P<job_sizemb>\d+)mb\-(?P<job_num>\d+)
+EXTRACT-jobname = ^(?:[^:\n]*:){8}\s+(?P<jobname>[^,]+)
